# hadoop-szl

./: .gitignore  Makefile.am  TODO  autogen.sh  configure.ac
debian/: changelog  control  copyright
hadoop-szl/: base64.cc  base64.h  emitter.cc  emitter.h  hadoop-emitter.cc  hadoop-emitter.h  hadoop-szl-runner.cc  main.cc  map.cc  map.h  reduce.cc  reduce.h  runner.cc  runner.h  table.cc  table.h
python/: hadoopszl.py
sandbox/: mapper.cc  reducer.cc
scripts/: hadoop-saw.in
test/: run-test.sh.in
test/bad-syntax/: run.sh
test/wc/: lorem.txt  run.sh  wc.conf  wc.szl
test/web-stats/: web-stats.szl
test/word-freq/: run.sh  word-freq.szl
